[package]
name = "double_decker"
version = "0.0.2"
authors = ["Tim Fish <tim@timfish.uk>"]
edition = "2018"
license = "MIT"
description = "A simple unbounded multi-producer multi-subscriber event bus built with crossbeam channels"
readme = "README.md"
repository = "https://github.com/timfish/double_decker"

[dependencies]
parking_lot = "0.11"
crossbeam = "0.7"